--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "type": "module",
   "private": true,
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/bun": "latest",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/socket.io": "^3.0.2",
     "drizzle-kit": "^0.31.4",
     "tsx": "^4.20.3"
@@ -17,8 +19,10 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.17.1",
+    "bcrypt": "^6.0.0",
     "drizzle-orm": "^0.44.3",
     "hono": "^4.8.5",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.2",
     "socket.io": "^4.8.1"
   }
