--- a/package.json
+++ b/package.json
@@ -3,16 +3,24 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "sideEffects": false,
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/bun": "latest",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/socket.io": "^3.0.2",
+    "@vitest/coverage-v8": "^3.2.4",
+    "c8": "^10.1.3",
     "drizzle-kit": "^0.31.4",
-    "tsx": "^4.20.3"
+    "tsx": "^4.20.3",
+    "vitest": "^3.2.4"
   },
   "scripts": {
-    "dev": "bun --watch index.ts"
+    "dev": "bun --watch index.ts",
+    "build": "bun build index.ts --outdir dist --minify --target bun",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage"
   },
   "peerDependencies": {
     "typescript": "^5.8.3"
