--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "vitest": "^3.2.4"
   },
   "scripts": {
-    "dev": "bun --watch index.ts",
-    "build": "bun build index.ts --outdir dist --minify --target bun",
+    "dev": "bun --watch server.ts",
+    "build": "bun build server.ts --outdir dist --minify --target bun",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage"
@@ -32,6 +32,7 @@
     "hono": "^4.8.5",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.2",
+    "pino": "^9.7.0",
     "socket.io": "^4.8.1"
   }
 }
