refactor: update module entry point in package.json and clean up unused code in game.controller.ts

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bun-project",
-  "module": "index.ts",
+  "module": "server.ts",
   "type": "module",
   "private": true,
   "sideEffects": false,
