Implemented InsertGame repository method

--- a/.env
+++ b/.env
@@ -4,12 +4,10 @@ JWT_ACCESS_SECRET=MG6pRZVWycswhc1VXxRGXx7DqjmvDpA1htK50vKKP7I
 JWT_REFRESH_SECRET=iXnCceMQUP3WJytzR1Yk3ZzyzIEpPbwI6b6zqEMy9A
 PASSWORD_SALT=5P2jUq3sY5Qy5sjFRIPRt1Z5fjMvX58ygKkAylHQ4oo
 
-
-
 DATABASE_DIALECT=postgresql
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
-DATABASE_NAME=bun_hono
+DATABASE_NAME=games
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=root
 DATABASE_PROTOCOL=postgres
