refactor: add JWT expiration handling in environment configuration and services

--- a/.env
+++ b/.env
@@ -3,6 +3,8 @@ SERVER_PORT=5000
 JWT_ACCESS_SECRET=MG6pRZVWycswhc1VXxRGXx7DqjmvDpA1htK50vKKP7I
 JWT_REFRESH_SECRET=iXnCceMQUP3WJytzR1Yk3ZzyzIEpPbwI6b6zqEMy9A
 PASSWORD_SALT=5P2jUq3sY5Qy5sjFRIPRt1Z5fjMvX58ygKkAylHQ4oo
+JWT_ACCESS_EXPIRE="7days"
+JWT_REFRESH_EXPIRE="7days"
 
 DATABASE_DIALECT=postgresql
 DATABASE_HOST=localhost
