--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "@hono/node-server": "^1.17.1",
     "bcrypt": "^6.0.0",
     "drizzle-orm": "^0.44.3",
+    "ffi-napi": "^4.0.3",
     "hono": "^4.8.5",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.2",
     "pino": "^9.7.0",
     "postgres": "^3.4.7",
+    "ref-napi": "^3.0.3",
     "socket.io": "^4.8.1"
   }
 }
