--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
     "@vitest/coverage-v8": "^3.2.4",
     "c8": "^10.1.3",
     "drizzle-kit": "^0.31.4",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.20.3",
-    "typescript": "^5.9.2",
-    "vitest": "^3.2.4"
+    "typescript": "^5.9.2"
   },
   "scripts": {
     "dev": "bun --watch server.ts",
