--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "bcrypt": "^6.0.0",
     "drizzle-orm": "^0.44.3",
     "ffi-napi": "^4.0.3",
+    "firebase": "^12.3.0",
     "hono": "^4.8.5",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.2",
