--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bun-project",
   "module": "server.ts",
-  "type": "module",
+  "type": "commonjs",
   "private": true,
   "sideEffects": false,
   "devDependencies": {
@@ -24,10 +24,10 @@
   "scripts": {
     "dev": "bun --watch server.ts",
     "dev-debug": "bun server.ts",
-    "ts-node": "ts-node server",
     "tsc": "tsc",
     "build": "bun build server.ts --outdir dist --minify --target bun",
     "build:node": "bun build server.ts --outdir dist --minify --target node",
+    "bundle": "tsc && node bundle.mjs",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
@@ -44,6 +44,7 @@
     "@eslint/js": "^9.36.0",
     "@hono/node-server": "^1.19.4",
     "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.3",
     "ffi-napi": "^4.0.3",
     "firebase": "^12.3.0",
