--- a/package.json
+++ b/package.json
@@ -46,12 +46,14 @@
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.3",
+    "ffi-napi": "^4.0.3",
     "firebase": "^12.3.0",
     "hono": "^4.8.5",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.2",
     "pino": "^9.7.0",
     "postgres": "^3.4.7",
+    "ref-napi": "^3.0.3",
     "socket.io": "^4.8.1"
   }
 }
