--- a/.env
+++ b/.env
@@ -14,4 +14,8 @@ DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=root
 DATABASE_PROTOCOL=postgres
 
+SSL_KEY='D:/SSL/ec.key'
+SSL_CERT='D:/SSL/ec.crt'
+FILE_UPLOAD_DIR='D:/data/uploads'
+
 LOG_LEVEL=info
