- SSL is enabled

--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ JWT_REFRESH_EXPIRE="7days"
 #DATABASE_PROTOCOL=postgres
 
 DATABASE_DIALECT=postgresql
-DATABASE_HOST=dpg-d3jpokjipnbc73cmhvm0-a.singapore-postgres.render.com
+DATABASE_HOST=dpg-d3jpokjipnbc73cmhvm0-a
 DATABASE_PORT=5432
 DATABASE_NAME=games_r1x1
 DATABASE_USERNAME=optimus
